docs: Update enterprise platform architecture and microservices README